<resources>
    <string name="app_name">mine</string>
    <string name="main_activity_001">第一章</string>
    <string name="main_activity_002">第二章</string>
    <string name="main_activity_003">第三章</string>
    <string name="main_activity_004">第四章</string>
    <string name="main_activity_005">第五章</string>
    <string name="main_activity_006">第六章</string>
    <string name="main_activity_007">第七章</string>
    <string name="main_activity_008">第八章</string>
    <string name="main_activity_009">第九章</string>
    <string name="main_activity_0010">第十章</string>
    <string name="title_activity_chapater2">Chapater2Activity</string>
    <string name="radio_button_test">RadioButtonTest</string>
    <string name="title_activity_chapater2_1">Chapater2_1Activity</string>
    <string name="title_dynamic_feature">Module Title</string>
    <string name="title_dynamic_feature2">Module Title</string>


    <!--*********************************************************************************-->
    <string name="github">https://github.com/Blankj/AndroidUtilCode</string>
    <string name="blog">https://blankj.com</string>

    <string name="core_util">Core Util</string>
    <string name="sub_util">Sub Util</string>

    <string name="author">Blankj</string>
    <string name="demo_of_android_util_code">Demo of AndroidUtilCode</string>

    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>

    <string name="permission_rationale_message">You have rejected us to apply for authorization, please agree to authorization, otherwise the function can\'t be used normally!</string>
    <string name="permission_denied_forever_message">We need some of the permissions you rejected or the system failed to apply failed, please manually set to the page authorize, otherwise the function can\'t be used normally!</string>
</resources>
