<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/main_activity_001"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/main_activity_001" />

            <TextView
                android:id="@+id/main_activity_002"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/main_activity_002" />

            <TextView
                android:id="@+id/main_activity_003"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/main_activity_003" />

            <TextView
                android:id="@+id/main_activity_004"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/main_activity_004" />

            <TextView
                android:id="@+id/main_activity_005"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/main_activity_005" />

            <TextView
                android:id="@+id/main_activity_006"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/main_activity_006" />

            <TextView
                android:id="@+id/main_activity_007"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/main_activity_007" />

            <TextView
                android:id="@+id/main_activity_008"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/main_activity_008" />

            <TextView
                android:id="@+id/main_activity_009"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/main_activity_009" />

            <TextView
                android:id="@+id/main_activity_0010"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/main_activity_0010" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>